# PunkWM

./: .gitignore  Cargo.toml  commends.txt  config.toml.in  install.sh  make.sh  readme.md  socat
desktops/: PunkWM.desktop  punkwm_settings_panel.sh
punkwm_dock/src/: index.html  lock.html  settings.html  ytm.html
punkwm_dock/src-tauri/: Cargo.toml  tauri.conf.json
punkwm_dock/src-tauri/capabilities/: default.json
punkwm_dock/src-tauri/src/: apphandle.rs  lib.rs  main.rs  mod.rs
punkwm_dock/src/css/: dock.css  panel.css  styles.css
punkwm_dock/src/js/: battery.js  layout.js  main.js  network.js  panel.js  utils.js  workspace.js
punkwm_dock/src/langs/: Spanish.json
punkwm_dock/src/services/: IPC.js  layout.js  panel.js  sys.js  workspace.js
punkwm_lock/src/: index.html
punkwm_lock/src-tauri/: Cargo.toml  tauri.conf.json
punkwm_lock/src-tauri/src/: apphandle.rs  (+2 more)
services/: punklock.service
src/: main.rs  mod.rs
src/custom_event/: entity.rs  main_thread_notifier.rs  mod.rs
src/google/: calendar.rs  credentials.rs  examplr.rs  mod.rs  oauth.rs
src/ipc/: handler.rs  message.rs  mod.rs  server.rs  socket.rs
src/localaudio/: audio_thread.rs  entity.rs  mod.rs
src/network_manager/: connection.rs  device.rs  error.rs  manager.rs  mod.rs  wifi.rs
src/utils/: battery.rs  brightness.rs  config.rs  desktops.rs  keys.rs  mod.rs  notifications.rs  paths.rs  qrcode.rs  random.rs  song.rs  system.rs  sysuser.rs  volume.rs  weather.rs
src/wm/: dock.rs  focus.rs  layout.rs  lock.rs  manager.rs  mod.rs  movement.rs  panel.rs  persistence.rs  workspace.rs
(+147 files in other folders)
