[package]
name = "punk_wm"
version = "0.1.0"
edition = "2021"


[dependencies]
x11rb = "0.13"
tracing-subscriber = "0.3"
calloop = "0.12"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
rand = "0.8"
battery = "0.7"
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
iana-time-zone = "0.1"
chrono-tz = "0.8"
urlencoding = "2"
scraper = "0.19"
zbus = "4"
futures-util = "0.3"
zvariant = "4"
walkdir = "2"
shellexpand = "3"
qrcode = { version = "0.14", features = ["image"] }
image = "0.24"
base64 = "0.22"
